# Pure-V

./: Cargo.toml  README.md  input.txt  roadmap.md  test_2.txt
assembler/: input.txt  output.txt
assembler/src/: convert_bytes.rs  file_cleaner.rs  label_parse.rs  label_resolver.rs  main.rs  opcode.rs  parser.rs  symbol_table.rs  syntax_analysis.rs  tokenizer.rs  tokens.rs
src/: auxiliar.rs  code_generation.rs  lexical_analysis.rs  lib.rs  main.rs  structures.rs  symbol_resolution.rs  syntax_analysis.rs  utils.rs
src/auxiliar/: convertion.rs  error.rs  instruction.rs  operands.rs
src/pipeline/: _1_lexical_analysis.rs  _2_symbol_resolution.rs  _3_syntax_analysis.rs  _4_code_generation.rs
src/utils/: error.rs  instruction.rs  operands.rs  parsing.rs  token.rs
tests/: general.rs  individual.rs  instruction_specific.rs  program_wide.rs
