[package]
name = "pure-rv32i"
version = "0.1.0"
authors = ["Jeronimo Capelle <jero.capelle@gmail.com>"]
edition = "2024"
description = "A purist, zero-dependency RISC-V 32I assembler built in Rust."
readme = "README.md"
repository = "https://github.com/JeronimoCapelle/Pure-RISCV32I-Assembler"
license = "CC0-1.0"
keywords = ["parser", "cli", "terminal","rust", "embedded"]
categories = ["command-line-utilities","embedded","development-tools","encoding","parser-implementations"]

[dependencies]

[lints.rust]
# missing_docs = "forbid"
rust_2018_idioms = "forbid"
unsafe_code = "forbid"

[lints.clippy]

pedantic = "forbid"
nursery = "forbid"
cargo = "forbid"


unwrap_used = "forbid"
expect_used = "forbid"
panic = "forbid"
todo = "forbid"
unimplemented = "forbid"
reachable = "forbid"


as_conversions = "forbid"         
clone_on_ref_ptr = "forbid"       
str_to_string = "forbid"          
alloc_instead_of_core = "forbid"  
std_instead_of_core = "forbid"    


arithmetic_side_effects = "forbid" 
float_cmp_const = "forbid"         


print_stdout = "forbid"        
print_stderr = "forbid"       
dbg_macro = "forbid"          


missing_docs_in_private_items = "forbid" 
missing_inline_in_public_items = "forbid"
unseparated_literal_suffix = "forbid"  

all =  "forbid"
too_many_lines = "forbid"



[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
incremental = true


[profile.dev.package."*"]
opt-level = 3


[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "unwind"
debug = "line-tables-only"
strip = "none"
debug-assertions = false
overflow-checks = false

[profile.max-perf]
inherits = "release"
lto = "fat"
codegen-units = 1
panic = "abort"
debug = false
strip = "symbols"